// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<PostCommentForm
  disabledMessage="closed"
  initialValues={
    Object {
      "body": "",
    }
  }
  max={100}
  min={3}
  onChange={[Function]}
  onSubmit={[Function]}
  showMessageBox={false}
  story={
    Object {
      "id": "story-id",
      "isClosed": false,
      "settings": Object {
        "messageBox": Object {
          "enabled": false,
        },
      },
    }
  }
  submitStatus={null}
/>
`;

exports[`renders when commenting has been disabled (collapsing) 1`] = `
<PostCommentFormClosedSitewide
  message="commenting disabled"
  showMessageBox={false}
  story={
    Object {
      "id": "story-id",
      "isClosed": false,
      "settings": Object {
        "messageBox": Object {
          "enabled": false,
        },
      },
    }
  }
/>
`;

exports[`renders when commenting has been disabled (non-collapsing) 1`] = `
<PostCommentForm
  disabled={true}
  disabledMessage="commenting disabled"
  initialValues={
    Object {
      "body": "",
    }
  }
  max={100}
  min={3}
  onChange={[Function]}
  onSubmit={[Function]}
  showMessageBox={false}
  story={
    Object {
      "id": "story-id",
      "isClosed": false,
      "settings": Object {
        "messageBox": Object {
          "enabled": false,
        },
      },
    }
  }
  submitStatus={null}
/>
`;

exports[`renders when story has been closed (collapsing) 1`] = `
<PostCommentFormClosed
  message="story closed"
  showMessageBox={false}
  story={
    Object {
      "id": "story-id",
      "isClosed": true,
      "settings": Object {
        "messageBox": Object {
          "enabled": false,
        },
      },
    }
  }
/>
`;

exports[`renders when story has been closed (non-collapsing) 1`] = `
<PostCommentForm
  disabled={true}
  disabledMessage="story closed"
  initialValues={
    Object {
      "body": "",
    }
  }
  max={100}
  min={3}
  onChange={[Function]}
  onSubmit={[Function]}
  showMessageBox={false}
  story={
    Object {
      "id": "story-id",
      "isClosed": true,
      "settings": Object {
        "messageBox": Object {
          "enabled": false,
        },
      },
    }
  }
  submitStatus={null}
/>
`;

exports[`renders when user is scheduled to be deleted 1`] = `
<PostCommentForm
  disabled="2019-01-01T00:00:00.000Z"
  disabledMessage={
    <Localized
      id="comments-postCommentForm-userScheduledForDeletion-warning"
    >
      Commenting is disabled when your account is scheduled for deletion.
    </Localized>
  }
  initialValues={
    Object {
      "body": "",
    }
  }
  max={100}
  min={3}
  onChange={[Function]}
  onSubmit={[Function]}
  showMessageBox={false}
  story={
    Object {
      "id": "story-id",
      "isClosed": false,
      "settings": Object {
        "messageBox": Object {
          "enabled": false,
        },
      },
    }
  }
  submitStatus={null}
/>
`;

exports[`renders with initialValues 1`] = `
<PostCommentForm
  disabledMessage="closed"
  initialValues={
    Object {
      "body": "Hello World!",
    }
  }
  max={100}
  min={3}
  onChange={[Function]}
  onSubmit={[Function]}
  showMessageBox={false}
  story={
    Object {
      "id": "story-id",
      "isClosed": false,
      "settings": Object {
        "messageBox": Object {
          "enabled": false,
        },
      },
    }
  }
  submitStatus={null}
/>
`;
